--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ kiwisolver==1.2.0
 matplotlib==3.2.1
 numpy==1.18.4
 pandas==1.0.3
+playsound==1.2.2
 psycopg2==2.7.5
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -26,6 +27,7 @@ python-gnupg==0.4.6
 pytz==2020.1
 requests==2.23.0
 six==1.15.0
+SpeechRecognition==3.8.1
 sqlparse==0.3.1
 urllib3==1.25.9
 whitenoise==5.1.0
